<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/category_page"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/category_buttons"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <LinearLayout
                    android:id="@+id/category_music"
                    style="@style/CategoryButtonStyle"
                    android:background="@drawable/category_button_left" >

                    <ImageView
                        style="@style/CategoryButtonIconStyle"
                        android:src="@drawable/category_icon_music" />

                    <TextView
                        style="@style/CategoryButtonTextStyle"
                        android:text="@string/category_music" />

                    <TextView
                        android:id="@+id/category_music_count"
                        style="@style/CategoryButtonCountTextStyle" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/category_video"
                    style="@style/CategoryButtonStyle"
                    android:background="@drawable/category_button_middle" >

                    <ImageView
                        style="@style/CategoryButtonIconStyle"
                        android:src="@drawable/category_icon_video" />

                    <TextView
                        style="@style/CategoryButtonTextStyle"
                        android:text="@string/category_video" />

                    <TextView
                        android:id="@+id/category_video_count"
                        style="@style/CategoryButtonCountTextStyle" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/category_picture"
                    style="@style/CategoryButtonStyle"
                    android:background="@drawable/category_button_right" >

                    <ImageView
                        style="@style/CategoryButtonIconStyle"
                        android:src="@drawable/category_icon_picture" />

                    <TextView
                        style="@style/CategoryButtonTextStyle"
                        android:text="@string/category_picture" />

                    <TextView
                        android:id="@+id/category_picture_count"
                        style="@style/CategoryButtonCountTextStyle" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="horizontal" >

                <!--
                <LinearLayout
                    android:id="@+id/category_theme"
                    style="@style/CategoryButtonStyle"
                    android:background="@drawable/category_button_left" >

                    <ImageView
                        style="@style/CategoryButtonIconStyle"
                        android:src="@drawable/category_icon_theme" />

                    <TextView
                        style="@style/CategoryButtonTextStyle"
                        android:text="@string/category_theme" />

                    <TextView
                        android:id="@+id/category_theme_count"
                        style="@style/CategoryButtonCountTextStyle" />
                </LinearLayout>
                -->
                <LinearLayout
                    android:id="@+id/category_apk"
                    style="@style/CategoryButtonStyle"
                    android:background="@drawable/category_button_left" >

                    <ImageView
                        style="@style/CategoryButtonIconStyle"
                        android:src="@drawable/category_icon_apk" />

                    <TextView
                        style="@style/CategoryButtonTextStyle"
                        android:text="@string/category_apk" />

                    <TextView
                        android:id="@+id/category_apk_count"
                        style="@style/CategoryButtonCountTextStyle" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/category_document"
                    style="@style/CategoryButtonStyle"
                    android:background="@drawable/category_button_middle" >

                    <ImageView
                        style="@style/CategoryButtonIconStyle"
                        android:src="@drawable/category_icon_document" />

                    <TextView
                        style="@style/CategoryButtonTextStyle"
                        android:text="@string/category_document" />

                    <TextView
                        android:id="@+id/category_document_count"
                        style="@style/CategoryButtonCountTextStyle" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/category_zip"
                    style="@style/CategoryButtonStyle"
                    android:background="@drawable/category_button_right" >

                    <ImageView
                        style="@style/CategoryButtonIconStyle"
                        android:src="@drawable/category_icon_zip" />

                    <TextView
                        style="@style/CategoryButtonTextStyle"
                        android:text="@string/category_zip" />

                    <TextView
                        android:id="@+id/category_zip_count"
                        style="@style/CategoryButtonCountTextStyle" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="horizontal" >
<LinearLayout
                    android:id="@+id/category_apk"
                    style="@style/CategoryButtonStyle"
                    android:background="@drawable/category_button_left" >

                    <ImageView
                        style="@style/CategoryButtonIconStyle"
                        android:src="@drawable/category_icon_apk" />

                    <TextView
                        style="@style/CategoryButtonTextStyle"
                        android:text="@string/category_apk" />

                    <TextView
                        android:id="@+id/category_apk_count"
                        style="@style/CategoryButtonCountTextStyle" />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/category_favorite"
                    style="@style/CategoryButtonStyle"
                    android:background="@drawable/category_button_middle" >

                    <ImageView
                        style="@style/CategoryButtonIconStyle"
                        android:src="@drawable/category_icon_favorite" />

                    <TextView
                        style="@style/CategoryButtonTextStyle"
                        android:text="@string/category_favorite" />

                    <TextView
                        android:id="@+id/category_favorite_count"
                        style="@style/CategoryButtonCountTextStyle" />
                </LinearLayout>

                <LinearLayout
                    style="@style/CategoryButtonStyle"
                    android:background="@drawable/category_button_right" >
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <!-- category information -->

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/information_bg"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingTop="5dip" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:layout_marginLeft="20px"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/sd_card_capacity"
                    style="@style/InformationTextStyle"
                    android:drawableLeft="@drawable/sd_card_icon" />

                <TextView
                    android:id="@+id/sd_card_available"
                    style="@style/InformationTextStyle"
                    android:layout_marginLeft="10dip"
                    android:drawableLeft="@drawable/sd_card_available_icon" />
            </LinearLayout>

            <com.android.zch.CategoryBar
                android:id="@+id/category_bar"
                android:layout_width="fill_parent"
                android:layout_height="35px"
                android:layout_gravity="center"
                android:layout_marginBottom="5dip" >
            </com.android.zch.CategoryBar>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dip"
                    android:layout_marginLeft="20px"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/category_legend_music"
                        style="@style/CategoryLegendStyle"
                        android:drawableLeft="@drawable/legend_music" />

                    <TextView
                        android:id="@+id/category_legend_video"
                        style="@style/CategoryLegendStyle"
                        android:drawableLeft="@drawable/legend_video" />

                    <TextView
                        android:id="@+id/category_legend_picture"
                        style="@style/CategoryLegendStyle"
                        android:drawableLeft="@drawable/legend_picture" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dip"
                    android:layout_marginLeft="20px"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/category_legend_apk"
                        style="@style/CategoryLegendStyle"
                        android:drawableLeft="@drawable/legend_apk" />

                    <TextView
                        android:id="@+id/category_legend_document"
                        style="@style/CategoryLegendStyle"
                        android:drawableLeft="@drawable/legend_document" />

                    <TextView
                        android:id="@+id/category_legend_zip"
                        style="@style/CategoryLegendStyle"
                        android:drawableLeft="@drawable/legend_zip" />
                </LinearLayout>

<!--                 <LinearLayout -->
<!--                     android:layout_width="fill_parent" -->
<!--                     android:layout_height="wrap_content" -->
<!--                     android:layout_marginBottom="5dip" -->
<!--                     android:layout_marginLeft="20px" -->
<!--                     android:orientation="horizontal" > -->

<!--                     <TextView -->
<!--                         android:id="@+id/category_legend_apk" -->
<!--                         style="@style/CategoryLegendStyle" -->
<!--                         android:drawableLeft="@drawable/legend_apk" /> -->

<!--                     <TextView -->
<!--                         android:id="@+id/category_legend_other" -->
<!--                         style="@style/CategoryLegendStyle" -->
<!--                         android:drawableLeft="@drawable/legend_other" /> -->

<!--                     <TextView style="@style/CategoryLegendStyle" /> -->
<!--                 </LinearLayout> -->
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>